tests/spec/format/snapshots/if_without_else.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { if condition { do_something(); } }"
---
fn test() {
  if condition { do_something() }
}
