tests/spec/format/snapshots/impl_comment_after_method.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Foo {}
  
  impl Foo {
    fn foo() {}
    // test
  }
---
struct Foo {}

impl Foo {
  fn foo() {}

  // test
}
