tests/spec/format/snapshots/impl_comment_before_method.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Foo {}
  
  impl Foo {
    // test
    fn foo() {}
  }
---
struct Foo {}

impl Foo {
  // test
  fn foo() {}
}
