tests/spec/format/snapshots/impl_simple.snap
---
source: tests/spec/format/mod.rs
description: "impl Point { fn origin() -> Point { Point { x: 0, y: 0 } } }"
---
impl Point {
  fn origin() -> Point {
    Point { x: 0, y: 0 }
  }
}
