tests/spec/format/snapshots/import_after_item_alone_is_hoisted.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn main() {}
  
  import alias "go:fmt"
---
import alias "go:fmt"

fn main() {}
