tests/spec/format/snapshots/import_after_item_is_hoisted.snap
---
source: tests/spec/format/mod.rs
description: |-
  // leading note
  import "go:os"
  
  // section note
  fn main() {}
  
  // note before late import
  import "go:fmt"
---
import "go:fmt"
// leading note
import "go:os"

// section note
fn main() {}

// note before late import
