tests/spec/format/snapshots/import_after_item_keeps_its_line_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn main() {}
  
  import "go:fmt" // why
---
import "go:fmt" // why

fn main() {}
