tests/spec/format/snapshots/import_after_item_keeps_line_comments_on_both_imports.snap
---
source: tests/spec/format/mod.rs
description: |-
  import "go:os" // for Exit
  fn f() {}
  import "go:fmt" // why
---
import "go:fmt" // why
import "go:os" // for Exit

fn f() {}
