tests/spec/format/snapshots/import_comment_between_imports.snap
---
source: tests/spec/format/mod.rs
description: |-
  // http helpers
  import "go:net/http"
  // json helpers
  import "go:encoding/json"
  
  fn main() {}
---
// json helpers
import "go:encoding/json"
// http helpers
import "go:net/http"

fn main() {}
