tests/spec/format/snapshots/import_comment_on_import_line.snap
---
source: tests/spec/format/mod.rs
description: |-
  import "go:os" // needed for Exit
  import "go:fmt"
  
  fn main() {}
---
import "go:fmt"
import "go:os" // needed for Exit

fn main() {}
