tests/spec/format/snapshots/import_go_and_local_grouped.snap
---
source: tests/spec/format/mod.rs
description: |-
  import "commands"
  import "go:fmt"
  import "display"
  import "go:os"
---
import "go:fmt"
import "go:os"

import "commands"
import "display"
